[tool.poetry]
name = "rsx-scraper"
version = "0.1.0"
description = ""
authors = ["rosenari <rosenari88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
